[incubator-kie-issue#2018] Test case updates